@@ -1,6 +1,6 @@
 Changes in Shorewall 4.3.8
 
-None.
+1) Apply Tuomo Soini's patch for USE_DEFAULT_RT.
 
 Changes in Shorewall 4.3.7
 
