@@ -39,7 +39,9 @@ released late in 2009.
           P R O B L E M S   C O R R E C T E D   I N   4 . 3 . 8
 ----------------------------------------------------------------------------
 
-None.
+1)  Tuomo Soini provided a workaround patch for a problem seen in some
+    kernel's (see FAQ 82) that caused 'shorewall start' to fail when
+    USE_DEFAULT_RT=Yes .
 
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
